# python-ci

./: .gitignore  .mypy.ini  README.md  pyproject.toml  requirements-test.txt  setup.cfg
.github/actions/publish-docker/: action.yml
.github/actions/pytest/: action.yml
.github/workflows/: docker.yml  documentation.yml  full_run.yml  lint.yml  mypy.yml  prepare.yml  python-release.yml  release.yml  test.yml
.github/workflows/prepare/: action.yml
docker/: Dockerfile
sample/: main.py
tests/: test_add.py
