
[metadata]
name = python-ci
description = Test library for the shared CI
long-description = file: README.md
url = https://github.com/CHARM-Tx/python-ci
author = Nakul Khanna

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
setup_requires =
    setuptools_scm>=3.2
install_requires =
    mypy==0.971

[mypy]
python_version = 2.9
mypy_path = sample
