
[metadata]
name = ct-python-ci
description = Test library for the shared CI
long-description = file: README.md
url = https://github.com/CHARM-Tx/python-ci
author = Nakul Khanna

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
setup_requires =
    setuptools_scm>=3.2
install_requires =
    requests==2.22.0

[options.extras_require]
tests =
    mypy==0.971
    pytest==7.1.2
    pytest-cov==3.0.0
    typing-extensions==4.3.0

[mypy]
python_version = 3.9
files = sample

[tool:pytest]
addopts = --cov=sample
